--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "date-fns": "^2.16.1",
+    "history": "^5.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
@@ -22,6 +28,8 @@
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.15",
+    "@types/redux-actions": "^2.6.1",
     "@types/webpack": "^4.41.24",
     "@types/webpack-dev-server": "^3.11.1",
     "babel-loader": "^8.2.1",
