--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "serve": "serve -l 8080 public",
-    "start": "webpack serve --mode development"
+    "start": "NODE_ENV=development webpack serve --mode development"
   },
   "dependencies": {
     "date-fns": "^2.19.0",
@@ -23,6 +23,7 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/copy-webpack-plugin": "^6.3.0",
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/node": "^14.14.35",
@@ -36,6 +37,7 @@
     "copy-webpack-plugin": "^8.0.0",
     "dotenv": "^8.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "react-hot-loader": "^4.13.0",
     "serve": "^11.3.2",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
