--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -35,10 +35,16 @@
     "@types/webpack-dev-server": "^3.11.2",
     "babel-loader": "^8.2.1",
     "copy-webpack-plugin": "^8.0.0",
+    "css-loader": "^5.1.3",
     "dotenv": "^8.2.0",
+    "fibers": "^5.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "react-hot-loader": "^4.13.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "serve": "^11.3.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.0"
